worked with jdbc, applied filter, applied registeration, the system is not fully developed but it was never meant to be. it is just for learning

--- a/Servlet App/src/main/webapp/WEB-INF/web.xml
+++ b/Servlet App/src/main/webapp/WEB-INF/web.xml
@@ -1,70 +1,96 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="https://jakarta.ee/xml/ns/jakartaee"
-	xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
-	id="WebApp_ID" version="5.0">
-
-
-	<display-name>Servlet App</display-name>
-	<small-icon>apple.png</small-icon>
-	<large-icon>apple.png</large-icon>
-
-	<!-- these values are accessible by all servlet. Like global values -->
-	<context-param>
-		<param-name>namre</param-name>
-		<param-value>I_Dont Know</param-value>
-	</context-param>
-	
-	 <error-page>
-        <exception-type>java.lang.Throwable</exception-type>
-        <location>/error.jsp</location>
-    </error-page>
-
-
-	<servlet>
-		<servlet-name>add</servlet-name>
-		<servlet-class>com.yogesh.AddServlet</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>printer</servlet-name>
-		<servlet-class>com.yogesh.PrinterServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>add</servlet-name>
-		<url-pattern>/add</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>printer</servlet-name>
-		<url-pattern>/printer</url-pattern>
-	</servlet-mapping>
-	<welcome-file-list>
-		<welcome-file>AllAboutJsp.jsp</welcome-file>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-	</welcome-file-list>
-
-	<servlet>
-		<display-name>RedirectServlet</display-name>
-		<servlet-name>RedirectServlet</servlet-name>
-		<servlet-class>com.yogesh.RedirectServlet</servlet-class>
-
-		<!-- these values are servlet specific constants. Like local values -->
-		<init-param>
-			<param-name>name</param-name>
-			<param-value>I_Know</param-value>
-		</init-param>
-
-
-	</servlet>
-
-	<servlet-mapping>
-		<servlet-name>RedirectServlet</servlet-name>
-		<url-pattern>/redirect</url-pattern>
-	</servlet-mapping>
-
-
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" id="WebApp_ID" version="5.0">
+  <display-name>Servlet App</display-name>
+  <context-param>
+    <param-name>namre</param-name>
+    <param-value>I_Dont Know</param-value>
+  </context-param>
+  <error-page>
+    <exception-type>java.lang.Throwable</exception-type>
+    <location>/error.jsp</location>
+  </error-page>
+  <servlet>
+    <servlet-name>add</servlet-name>
+    <servlet-class>com.yogesh.AddServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>printer</servlet-name>
+    <servlet-class>com.yogesh.PrinterServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>add</servlet-name>
+    <url-pattern>/add</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>printer</servlet-name>
+    <url-pattern>/printer</url-pattern>
+  </servlet-mapping>
+  <welcome-file-list>
+    <welcome-file>AllAboutJsp.jsp</welcome-file>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+  </welcome-file-list>
+  <servlet>
+    <display-name>RedirectServlet</display-name>
+    <servlet-name>RedirectServlet</servlet-name>
+    <servlet-class>com.yogesh.RedirectServlet</servlet-class>
+    <init-param>
+      <param-name>name</param-name>
+      <param-value>I_Know</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>RedirectServlet</servlet-name>
+    <url-pattern>/redirect</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <servlet-name>jspSetter</servlet-name>
+    <servlet-class>com.yogesh.JSPSetterExample</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>jspSetter</servlet-name>
+    <url-pattern>/jspSetter</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>Register</display-name>
+    <servlet-name>Register</servlet-name>
+    <servlet-class>com.yogesh.Register</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Register</servlet-name>
+    <url-pattern>/register</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>Logout</display-name>
+    <servlet-name>Logout</servlet-name>
+    <servlet-class>com.yogesh.Logout</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Logout</servlet-name>
+    <url-pattern>/logout</url-pattern>
+  </servlet-mapping>
+  <filter>
+    <display-name>LoginFilter</display-name>
+    <filter-name>LoginFilter</filter-name>
+    <filter-class>com.yogesh.LoginFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>LoginFilter</filter-name>
+    <url-pattern>/jspSetter</url-pattern>
+    <url-pattern>/add</url-pattern>
+    <url-pattern>/printer</url-pattern>
+    <url-pattern>/redirect</url-pattern>
+    <url-pattern>/AllAboutJsp.jsp</url-pattern>
+    <url-pattern>/FormHandler.jsp</url-pattern>
+    <url-pattern>/index.html</url-pattern>
+    <url-pattern>/JSTL.jsp</url-pattern>
+    <url-pattern>/ShowPhones.jsp</url-pattern>
+  </filter-mapping>
 </web-app>
